Version 3.3.0, April 1, 2020

Renamings:
  -AuseDefaultsForUncheckedCode to -AuseConservativeDefaultsForUncheckedCode
    The old name works temporarily but will be removed in a future release.

For collection methods with `Object` formal parameter type, such as
contains, indexOf, and remove, the annotated JDK now forbids null as an
argument.  To make the Nullness Checker permit null, pass
`-Astubs=checker.jar/collection-object-parameters-may-be-null.astub`.

Implementation details:
 * Removed `@DefaultInUncheckedCodeFor` and
   `@DefaultQualifierInHierarchyInUncheckedCode`.
 * Renamings:
   applyUncheckedCodeDefaults() to applyConservativeDefaults()
   useUncheckedCodeDefault() to useConservativeDefault()
   AnnotatedTypeReplacer to AnnotatedTypeCopierWithReplacement
   AnnotatedTypeMerger to AnnotatedTypeReplacer
 * Deprecated the `framework.source.Result` class; use `DiagMessage` or
   `List<DiagMessage>` instead.  If you were creating a `Result` just to
   pass it to `report`, then call new methods `reportError` and
   `reportWarning` instead.
 * AbstractTypeProcessor#typeProcessingOver() always gets called.

---------------------------------------------------------------------------

Version 3.2.0, March 2, 2020

@SuppressWarnings("initialization") suppresses only warnings whose key
contains "initialization".  Previously, it suppressed all warnings issued
by the Nullness Checker or the Initialization Checker.

Closed issues:
2719, 3001, 3020, 3069, 3093, 3120.

---------------------------------------------------------------------------

Version 3.1.1, February 3, 2020

New command-line options:
  -AassumeDeterministic Unsoundly assume that every method is deterministic
  -AassumePure Unsoundly assume that every method is pure

Renamed -Anocheckjdk to -ApermitMissingJdk.
The old version still works, for backward compatibility.

Renamed -Alint=forbidnonnullarraycomponents to
-Alint=soundArrayCreationNullness.  The old version still works, for