@@ -1,0 +1,10 @@
+Issue1929.java:21:25: compiler.err.proc.messager: [return.type.incompatible] incompatible types in return.
+type of expression: @Initialized @Nullable String @Initialized @NonNull []
+method return type: @Initialized @NonNull String @Initialized @NonNull []
+Issue1929.java:21:25: compiler.warn.proc.messager: [toArray.nullable.elements.not.newarray] call of toArray on collection of non-null elements yields an array of possibly-null elements; omit the argument to toArray or make it an explicit array constructor
+Issue1929.java:29:25: compiler.err.proc.messager: [return.type.incompatible] incompatible types in return.
+type of expression: @Initialized @Nullable String @Initialized @NonNull []
+method return type: @Initialized @NonNull String @Initialized @NonNull []
+Issue1929.java:29:25: compiler.warn.proc.messager: [toArray.nullable.elements.not.newarray] call of toArray on collection of non-null elements yields an array of possibly-null elements; omit the argument to toArray or make it an explicit array constructor
+2 errors
+2 warnings
