@@ -1,42 +1,35 @@
 package org.checkerframework.checker.nullness;
 
+import com.sun.source.tree.ExpressionTree;
 import com.sun.source.tree.MemberSelectTree;
 import com.sun.source.tree.MethodInvocationTree;
 import com.sun.source.tree.NewArrayTree;
 import com.sun.source.tree.Tree;
 import java.util.Collection;
+import java.util.List;
 import javax.annotation.processing.ProcessingEnvironment;
+import javax.lang.model.element.AnnotationMirror;
+import javax.lang.model.element.Element;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.type.TypeKind;
+import javax.lang.model.type.TypeMirror;
 import org.checkerframework.common.basetype.BaseTypeChecker;
+import org.checkerframework.common.value.qual.ArrayLen;
 import org.checkerframework.framework.type.AnnotatedTypeMirror;
 import org.checkerframework.framework.type.AnnotatedTypeMirror.AnnotatedArrayType;
 import org.checkerframework.framework.type.AnnotatedTypeMirror.AnnotatedDeclaredType;
 import org.checkerframework.framework.type.AnnotatedTypeMirror.AnnotatedExecutableType;
 import org.checkerframework.framework.util.AnnotatedTypes;
+import org.checkerframework.javacutil.AnnotationUtils;
+import org.checkerframework.javacutil.ElementUtils;
 import org.checkerframework.javacutil.TreeUtils;
 
 /**
  * Determines the nullness type of calls to {@link java.util.Collection#toArray()}.
  *
- * <p>The semantics of {@link Collection#toArray(Object[]) Collection.toArray(T[])} cannot be
- * captured by the nullness type system syntax. The nullness type of the returned array depends on
- * the size of the passed parameter. In particular, the returned array component is of type
- * {@code @NonNull} if the following conditions hold:
- *
- * <ol>
- *   <li value="1">The receiver collection type argument is {@code NonNull}, and
- *   <li value="2">The passed array size is less than the collection size. Here are heuristics to
- *       handle the most common cases:
- *       <ol>
- *         <li value="1">an empty array initializer, e.g. {@code c.toArray(new String[] {})},
- *         <li value="2">array creation tree of size 0, e.g. {@code c.toArray(new String[0])}, or
- *         <li value="3">array creation tree of the collection size method invocation {@code
- *             c.toArray(new String[c.size()])}
- *       </ol>
- * </ol>
- *
- * Note: The nullness of the returned array doesn't depend on the passed array nullness.
+ * @checker_framework.manual #nullness-collection-toarray Nullness and conversions from collections
+ *     to arrays
+ * @checker_framework.manual #constant-value-checker Constant Value Checker
  */
 public class CollectionToArrayHeuristics {
 
@@ -53,27 +46,34 @@ public class CollectionToArrayHeuristics {
     private final ExecutableElement size;
     /** The Collection type. */
     private final AnnotatedDeclaredType collectionType;
+    /** Whether to trust {@code @ArrayLen(0)} annotations. */
+    private final boolean trustArrayLenZero;
 
     /**
      * Create a CollectionToArrayHeuristics.
      *
-     * @param env the processing environment
      * @param checker the checker, used for issuing diagnostic messages
      * @param factory the type factory
      */
     public CollectionToArrayHeuristics(
-            ProcessingEnvironment env,
-            BaseTypeChecker checker,
-            NullnessAnnotatedTypeFactory factory) {
-        this.processingEnv = env;
+            BaseTypeChecker checker, NullnessAnnotatedTypeFactory factory) {
+        this.processingEnv = checker.getProcessingEnvironment();
         this.checker = checker;
         this.atypeFactory = factory;
 
         this.collectionToArrayE =
-                TreeUtils.getMethod(java.util.Collection.class.getName(), "toArray", env, "T[]");
-        this.size = TreeUtils.getMethod(java.util.Collection.class.getName(), "size", 0, env);
+                TreeUtils.getMethod(
+                        java.util.Collection.class.getName(), "toArray", processingEnv, "T[]");
+        this.size =
+                TreeUtils.getMethod(java.util.Collection.class.getName(), "size", 0, processingEnv);
         this.collectionType =
-                factory.fromElement(env.getElementUtils().getTypeElement("java.util.Collection"));
+                factory.fromElement(
+                        processingEnv.getElementUtils().getTypeElement("java.util.Collection"));
+
+        this.trustArrayLenZero =
+                checker.getLintOption(
+                        NullnessChecker.LINT_TRUSTARRAYLENZERO,
+                        NullnessChecker.LINT_DEFAULT_TRUSTARRAYLENZERO);
     }
 
     /**
@@ -86,11 +86,12 @@ public class CollectionToArrayHeuristics {
     public void handle(MethodInvocationTree tree, AnnotatedExecutableType method) {
         if (TreeUtils.isMethodInvocation(tree, collectionToArrayE, processingEnv)) {
             assert !tree.getArguments().isEmpty() : tree;
-            Tree argument = tree.getArguments().get(0);
-            boolean argIsArrayCreation =
-                    isHandledArrayCreation(argument, receiverName(tree.getMethodSelect()));
+            ExpressionTree argument = tree.getArguments().get(0);
             boolean receiverIsNonNull = receiverIsCollectionOfNonNullElements(tree);
-            setComponentNullness(receiverIsNonNull && argIsArrayCreation, method.getReturnType());
+            boolean argIsHandled =
+                    isHandledArrayCreation(argument, receiverName(tree.getMethodSelect()))
+                            || (trustArrayLenZero && isArrayLenZeroFieldAccess(argument));
+            setComponentNullness(receiverIsNonNull && argIsHandled, method.getReturnType());
 
             // TODO: We need a mechanism to prevent nullable collections
             // from inserting null elements into a nonnull arrays.
@@ -98,7 +99,7 @@ public class CollectionToArrayHeuristics {
                 setComponentNullness(false, method.getParameterTypes().get(0));
             }
 
-            if (receiverIsNonNull && !argIsArrayCreation) {
+            if (receiverIsNonNull && !argIsHandled) {
                 if (argument.getKind() != Tree.Kind.NEW_ARRAY) {
                     checker.reportWarning(tree, "toArray.nullable.elements.not.newarray");
                 } else {
@@ -136,7 +137,7 @@ public class CollectionToArrayHeuristics {
         }
         NewArrayTree newArr = (NewArrayTree) argument;
 
-        // case 1: empty array initializer
+        // empty array initializer
         if (newArr.getInitializers() != null) {
             return newArr.getInitializers().isEmpty();
         }
@@ -144,18 +145,47 @@ public class CollectionToArrayHeuristics {
         assert !newArr.getDimensions().isEmpty();
         Tree dimension = newArr.getDimensions().get(newArr.getDimensions().size() - 1);
 
-        // case 2: 0-length array creation
+        // 0-length array creation
         if (dimension.toString().equals("0")) {
             return true;
         }
 
-        // case 3: size()-length array creation
+        // size()-length array creation
         if (TreeUtils.isMethodInvocation(dimension, size, processingEnv)) {
             MethodInvocationTree invok = (MethodInvocationTree) dimension;
             String invokReceiver = receiverName(invok.getMethodSelect());
             return invokReceiver.equals(receiver);
         }
 
+        return false;
+    }
+
+    /**
+     * Returns true if the argument is a field access expression, where the field has declared type
+     * {@code @ArrayLen(0)}.
+     *
+     * @param argument an expression tree
+     * @return true if the argument is a field access expression, where the field has declared type
+     *     {@code @ArrayLen(0)}
+     */
+    private boolean isArrayLenZeroFieldAccess(ExpressionTree argument) {
+        Element el = TreeUtils.elementFromUse(argument);
+        if (el != null && el.getKind().isField()) {
+            TypeMirror t = ElementUtils.getType(el);
+            if (t.getKind() == TypeKind.ARRAY) {
+                List<? extends AnnotationMirror> ams = t.getAnnotationMirrors();
+                for (AnnotationMirror am : ams) {
+                    if (AnnotationUtils.areSameByClass(am, ArrayLen.class)) {
+                        List<Integer> lens =
+                                AnnotationUtils.getElementValueArray(
+                                        am, "value", Integer.class, false);
+                        if (lens.size() == 1 && lens.get(0) == 0) {
+                            return true;
+                        }
+                    }
+                }
+            }
+        }
         return false;
     }
 
