@@ -29,7 +29,8 @@ import org.checkerframework.framework.source.SupportedLintOptions;
     // See issue #986: https://github.com/typetools/checker-framework/issues/986
     "soundArrayCreationNullness",
     // old name for soundArrayCreationNullness; temporary, for backward compatibility
-    "forbidnonnullarraycomponents"
+    "forbidnonnullarraycomponents",
+    NullnessChecker.LINT_TRUSTARRAYLENZERO
 })
 public class NullnessChecker extends InitializationChecker {
 
@@ -47,6 +48,15 @@ public class NullnessChecker extends InitializationChecker {
 
     /** Default for {@link #LINT_REDUNDANTNULLCOMPARISON}. */
     public static final boolean LINT_DEFAULT_REDUNDANTNULLCOMPARISON = false;
+
+    /**
+     * Should the Nullness Checker unsoundly trust {@code @ArrayLen(0)} annotations to improve
+     * handling of {@link java.util.Collection#toArray()} by {@link CollectionToArrayHeuristics}?
+     */
+    public static final String LINT_TRUSTARRAYLENZERO = "trustArrayLenZero";
+
+    /** Default for {@link #LINT_TRUSTARRAYLENZERO}. */
+    public static final boolean LINT_DEFAULT_TRUSTARRAYLENZERO = false;
 
     /*
     @Override
